[gd_scene load_steps=16 format=3 uid="uid://4xbg2x3k5qgq"]

[ext_resource type="Script" uid="uid://duft1c7gmp24o" path="res://Scripts/knight.gd" id="1_b66j6"]
[ext_resource type="Texture2D" uid="uid://yokarpvx03jw" path="res://Sprites/Knight.png" id="1_rrk28"]
[ext_resource type="Texture2D" uid="uid://d1sq33cjgfpi2" path="res://Sprites/death.png" id="3_43hye"]

[sub_resource type="AtlasTexture" id="AtlasTexture_88kja"]
atlas = ExtResource("1_rrk28")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_it8n0"]
atlas = ExtResource("1_rrk28")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbyq6"]
atlas = ExtResource("1_rrk28")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbq55"]
atlas = ExtResource("1_rrk28")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbj7x"]
atlas = ExtResource("1_rrk28")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t38ji"]
atlas = ExtResource("1_rrk28")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rslyr"]
atlas = ExtResource("3_43hye")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5h62n"]
atlas = ExtResource("3_43hye")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nf5tg"]
atlas = ExtResource("3_43hye")
region = Rect2(0, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_fxof2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_88kja")
}],
"loop": true,
"name": &"Idle_Back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_it8n0")
}],
"loop": true,
"name": &"Idle_Front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbyq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbq55")
}],
"loop": true,
"name": &"Run_Back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbj7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t38ji")
}],
"loop": true,
"name": &"Run_Front",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rslyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5h62n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nf5tg")
}],
"loop": false,
"name": &"death",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rrk28"]
size = Vector2(17, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b66j6"]
size = Vector2(19, 30)

[node name="Knight" type="CharacterBody2D" groups=["enemy"]]
process_mode = 4
script = ExtResource("1_b66j6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fxof2")
animation = &"death"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 2)
shape = SubResource("RectangleShape2D_rrk28")

[node name="player collision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player collision"]
position = Vector2(0.5, 2)
shape = SubResource("RectangleShape2D_b66j6")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="Movement" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="player collision" to="." method="_on_player_collision_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Movement" to="." method="_on_movement_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
